--- a/configs/speaker_ver.yaml
+++ b/configs/speaker_ver.yaml
@@ -31,7 +31,7 @@ dataset:
   seed: 0
   num_proc: auto
   cache_splits: true
-  force_rebuild: false                 # Force rebuild to ensure we get fresh data
+  force_rebuild: true              # Force rebuild to ensure we get fresh data
   # Sample limits
   total_pairs: 20000                  # Total number of pairs (50/50 pos/neg) across all splits
   max_train_samples: null
@@ -70,9 +70,9 @@ loss:
 # Training Configuration
 training:
   # Compute & batching
-  per_device_train_batch_size: 16   # Smaller batch size due to dual audio inputs (longer sequences)
-  per_device_eval_batch_size: 16
-  gradient_accumulation_steps: 2
+  per_device_train_batch_size: 12   # Smaller batch size due to dual audio inputs (longer sequences)
+  per_device_eval_batch_size: 12
+  gradient_accumulation_steps: 4
   bf16: true
   fp16: false
   gradient_checkpointing: true
@@ -85,7 +85,7 @@ training:
   weight_decay: 0.01
   max_grad_norm: 1.0
   # Schedule
-  num_train_epochs: 2
+  num_train_epochs: 3
   eval_strategy: steps
   eval_steps: 50
   save_strategy: steps
@@ -93,7 +93,7 @@ training:
   initial_eval: true
   # Checkpointing
   save_total_limit: 3
-  resume_from_checkpoint: null        # Options: null (start fresh), "auto" (detect latest), or explicit path
+  resume_from_checkpoint: auto        # Options: null (start fresh), "auto" (detect latest), or explicit path
   # Early stopping
   early_stopping_patience: 10
   early_stopping_threshold: 0.001
@@ -101,7 +101,7 @@ training:
   metric_for_best_model: eval_macro_f1  # Binary classification: use accuracy
   greater_is_better: true
   # Data loading
-  dataloader_num_workers: 16
+  dataloader_num_workers: 8
   dataloader_pin_memory: true
   dataloader_prefetch_factor: 4
   group_by_length: false              # Don't group by length (pairs have variable combined length)
